tests/neg/i7013c.scala
import quoted._

def foo() with QuoteContext = {
  type C
  '[C] // error
}
